<resources>
    <string name="app_name">Projet Vegas Musique Android</string>
    <string name="projet_vegas_musique">Projet Vegas Musique</string>
    <string name="enter">Enter</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="your_playlists">Your playlists</string>
    <string name="playlist">Playlist</string>
    <string name="all_the_music">All the music</string>
    <string name="music">Music</string>
    <string name="all_the_artists">All the artists</string>
    <string name="artist">Artist</string>
</resources>